Add basic structure for index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Escola CECSA</title>
+  <meta name="description" content="Escola CECSA - Instituição de ensino dedicada à formação educacional.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <div class="container">
+    <header>
+      <h1>Escola CECSA</h1>
+      <p>Instituição de ensino comprometida com educação de qualidade.</p>
+    </header>
+
+    <section>
+      <h2>Sobre a Escola</h2>
+      <p>
+        A Escola CECSA é uma instituição de ensino que atua na formação educacional
+        de crianças e jovens, promovendo conhecimento, ética e inovação.
+      </p>
+    </section>
+
+    <section>
+      <h2>Informações</h2>
+      <ul class="info-list">
+        <li><strong>Categoria:</strong> Educação</li>
+        <li><strong>Localização:</strong> Brasil</li>
+        <li><strong>Contato:</strong> contato@escolacecsa.com.br</li>
+      </ul>
+    </section>
+
+    <footer>
+      <p>
+        © 2026 Escola CECSA. Todos os direitos reservados.
+      </p>
+    </footer>
+  </div>
+
+</body>
+</html>
