Update contact and location information in index.html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <h2>Informações</h2>
       <ul class="info-list">
         <li><strong>Categoria:</strong> Educação</li>
-        <li><strong>Localização:</strong> Brasil</li>
-        <li><strong>Contato:</strong> contato@escolacecsa.com.br</li>
+        <li><strong>Localização:</strong> Rua Santa Isabel s/n, São Luís, Maranhão, Brasil</li>
+        <li><strong>Contato:</strong> cecsajardim@gmail.com</li>
       </ul>
     </section>
 
